--- a/app/index.html
+++ b/app/index.html
@@ -1,12 +1,22 @@
 <!--#set var="title" value="OptimizedHTML 5" -->
 <!--#include virtual="/parts/header.html" -->
 
-	<div style="max-width: 700px; margin: auto">
+    <div class="container">
 
-		<img src="images/dist/preview.jpg" alt="Start HTML5 Template" style="width: 100%"><br><br>
-		<h2>Welcome to startup HTML template OptimizedHTML 5!</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam reprehenderit nulla alias expedita a qui, pariatur doloremque ipsa fugit laboriosam odio iure recusandae laborum delectus praesentium magni reiciendis voluptatem. Sed.</p>
-	
-	</div>
+        <header class="main-header">
+            <h1>Программа выставки</h1>
+            <div id="schedule-type-btn">
+                Вид расписания: <span>Таблица</span>
+                <img src="/images/dist/down.svg" alt="⌄">
+            </div>
+
+            <!--#include virtual="/parts/weeks.html" -->
+
+        </header>
+
+    <!--#include virtual="/parts/list.html" -->
+    <!--#include virtual="/parts/table.html" -->
+
+    </div>
 
 <!--#include virtual="/parts/footer.html" -->
