--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
             <h1>Программа выставки</h1>
             <div id="schedule-type-btn">
                 Вид расписания: <span>Таблица</span>
-                <img src="/images/dist/down.svg" alt="⌄">
+                <img src="images/dist/down.svg" alt="⌄">
             </div>
 
             <!--#include virtual="/parts/weeks.html" -->
