--- a/app/parts/swiper.html
+++ b/app/parts/swiper.html
@@ -4,42 +4,42 @@
         <!-- Slides -->
         <div class="swiper-slide">
             <div class="speaker-swiper__item">
-                <div class="speaker-swiper__img" style="background-image: url('/images/dist/speakers/01.png')"></div>
+                <div class="speaker-swiper__img" style="background-image: url('images/dist/speakers/01.png')"></div>
                 <h4 class="speaker-swiper__info">Алексей Венгин <span>Profi.Travel</span></h4>
             </div>
         </div>
 
         <div class="swiper-slide">
             <div class="speaker-swiper__item">
-                <div class="speaker-swiper__img" style="background-image: url('/images/dist/speakers/02.png')"></div>
+                <div class="speaker-swiper__img" style="background-image: url('images/dist/speakers/02.png')"></div>
                 <h4 class="speaker-swiper__info">Магдалена Круч <span>Польская туристическая организации в Москве</span></h4>
             </div>
         </div>
 
         <div class="swiper-slide">
             <div class="speaker-swiper__item">
-                <div class="speaker-swiper__img" style="background-image: url('/images/dist/speakers/03.png')"></div>
+                <div class="speaker-swiper__img" style="background-image: url('images/dist/speakers/03.png')"></div>
                 <h4 class="speaker-swiper__info">Алексей Венгин <span>LIVE RĪGA</span></h4>
             </div>
         </div>
 
         <div class="swiper-slide">
             <div class="speaker-swiper__item">
-                <div class="speaker-swiper__img" style="background-image: url('/images/dist/speakers/05.png')"></div>
+                <div class="speaker-swiper__img" style="background-image: url('images/dist/speakers/05.png')"></div>
                 <h4 class="speaker-swiper__info">Ян Кац <span>Венгерская национальная управления по туризму</span></h4>
             </div>
         </div>
 
         <div class="swiper-slide">
             <div class="speaker-swiper__item">
-                <div class="speaker-swiper__img" style="background-image: url('/images/dist/speakers/06.png')"></div>
+                <div class="speaker-swiper__img" style="background-image: url('images/dist/speakers/06.png')"></div>
                 <h4 class="speaker-swiper__info">Георгий Мавроматис <span>Греческая Национальной Туристической Организации</span></h4>
             </div>
         </div>
 
         <div class="swiper-slide">
             <div class="speaker-swiper__item">
-                <div class="speaker-swiper__img" style="background-image: url('/images/dist/speakers/01.png')"></div>
+                <div class="speaker-swiper__img" style="background-image: url('images/dist/speakers/01.png')"></div>
                 <h4 class="speaker-swiper__info">Алексей Венгин <span>Profi.Travel</span></h4>
             </div>
         </div>
