Было время, поправил таблицу событий, вынес цвета в переменные, убрал лишнее, причесал код

--- a/app/parts/list.html
+++ b/app/parts/list.html
@@ -23,7 +23,7 @@
             <div class="event-card__join">
                 <button class="tourist-button add-button" id="addBtn">
                     <span></span>
-                    <div class="tourist-button__img"></div>
+                    <span class="tourist-button__img"></span>
                 </button>
                 <p>615 участников уже записались</p>
             </div>
