--- a/app/parts/table.html
+++ b/app/parts/table.html
@@ -1,51 +1,48 @@
 <div id="event-table" hidden>
      
-        <div class="event-table__day">
-            <header><a href="#"><a href="#">22 сентября, ПН</a></a></header>
-
+        <div class="event-table__field">
+            <header><a href="#">22 сентября, ПН</a></header>
             <div class="event-item">
-                <div class="event-item__time event-item__time_status_diabled">
+                <div class="event-item__time event-item__time_status_disabled">
                     9:00<sup>МСК</sup>
                 </div>
-                <div class="event-item__location">
-                </div>
-                <div class="event-item__info"></div>
-                <div class="event-item__add-btn">
-                </div>
             </div>
+        </div>
 
+        <div class="event-table__field">
             <div class="event-item">
                 <div class="event-item__time">
                     10:00<sup>МСК</sup>
                 </div>
-                <div class="event-item__location">Офис по туризму Дубая</div>
+                <div class="event-item__company">Офис по туризму Дубая</div>
                 <p class="event-item__info">
-                    Департамент туризма Дубая расскажет, как эмират обеспечивает безопасность жителей и гостей.
+                    Департамент туризма Дубая расскажет, как эмират обеспечивает безопасность жителей и гостей.1
                 </p>
                 <button class="calendar-btn calendar-btn_type_add event-item__add-btn">
                     <span></span>
                 </button>
             </div>
-
         </div>
 
-        <div class="event-table__day">
-            <header><a href="#">13 октября, ВТ</a></header>
 
+        <div class="event-table__field">
+            <header><a href="#">13 октября, ВТ</a></header>
             <div class="event-item">
                 <div class="event-item__time">
                     9:00<sup>МСК</sup>
                 </div>
-                <div class="event-item__location">Офис по туризму Дубая</div>
+                <div class="event-item__company">Офис по туризму Дубая</div>
 
                 <div class="event-item__info">
-                    FIT: все турагенты делают это. Как быстро и безопасно удовлетворять сложные запросы туристов?Как быстро и безопасно удовлетворять сложные запросы туристов?
+                    FIT: все турагенты делают это. Как быстро и безопасно удовлетворять сложные запросы туристов?Как быстро и безопасно удовлетворять сложные запросы туристов?2
                 </div>
                 <button class="calendar-btn calendar-btn_type_add event-item__add-btn">
                     <span></span>
                 </button>
             </div>
+        </div>
 
+        <div class="event-table__field">
             <div class="event-item">
                 <div class="event-item__time">
                     10:00<sup>МСК</sup>
@@ -53,47 +50,44 @@
                         live
                     </div>
                 </div>
-                <div class="event-item__location">Офис по туризму Дубая</div>
+                <div class="event-item__company">Офис по туризму Дубая</div>
                 <p class="event-item__info">
-                    Департамент туризма Дубая расскажет, как эмират обеспечивает безопасность жителей и гостей.
+                    Департамент туризма Дубая расскажет, как эмират обеспечивает безопасность жителей и гостей.3
                 </p>
                 <button class="calendar-btn calendar-btn_type_add event-item__add-btn">
                     <span></span>
                 </button>
             </div>
-
         </div>
 
-        <div class="event-table__day">
+
+        <div class="event-table__field">
             <header><a href="#">14 октября, СР</a></header>
 
             <div class="event-item">
-                <div class="event-item__time event-item__time_status_diabled">
+                <div class="event-item__time event-item__time_status_disabled">
                     9:00<sup>МСК</sup>
                 </div>
-                <div class="event-item__location">
-                </div>
-                <div class="event-item__info"></div>
-                <div class="event-item__add-btn">
-                </div>
             </div>
+        </div>
 
+        <div class="event-table__field">
             <div class="event-item">
                 <div class="event-item__time">
                     10:00<sup>МСК</sup>
                 </div>
-                <div class="event-item__location">Офис по туризму Дубая</div>
+                <div class="event-item__company">Офис по туризму Дубая</div>
                 <p class="event-item__info">
-                    Barceló в ОАЭ — все новости за час: готовимся к зимнему сезону, открытие нового отеля.
+                    Barceló в ОАЭ — все новости за час: готовимся к зимнему сезону, открытие нового отеля.4
                 </p>
                 <button class="calendar-btn calendar-btn_type_add event-item__add-btn">
                     <span></span>
                 </button>
             </div>
-
         </div>
 
-        <div class="event-table__day event-table__day_type_special">
+
+        <div class="event-table__field event-table__field_type_special">
             <header><a href="#">15 октября, ЧТ</a></header>
 
             <div class="event-item event-item_type_special">
@@ -101,43 +95,45 @@
                     День нетворкинга
                 </div>
                 <div class="event-item__info">
-                    В этот день открыта возможность проведения встреч в системе нетворкинга. Выберите партнеров в турбизнесе и начните общение с ними!
+                    В этот день открыта возможность проведения встреч в системе нетворкинга. Выберите партнеров в турбизнесе и начните общение с ними!5
                 </div>
                 <div class="system-login">
                     Перейти в систему
                 </div>
             </div>
-
         </div>
 
-        <div class="event-table__day">
-            <header><a href="#">16 октября, ПТ</a></header>
+        <div class="event-table__field event-table__field_type_special">
+            <div class="event-item event-item_type_special"></div>
+        </div>
 
+        <div class="event-table__field">
+            <header><a href="#">16 октября, ПТ</a></header>
             <div class="event-item">
-                <div class="event-item__time">
+                <div class="event-item__time event-item__time_status_disabled">
                     9:00<sup>МСК</sup>
                 </div>
-                <div class="event-item__location">
+            </div>
+        </div>
+
+        <div class="event-table__field">
+            <div class="event-item">
+                <div class="event-item__time">
+                    10:00<sup>МСК</sup>
+                </div>
+                <div class="event-item__company">
                     Офис по туризму Дубая
                 </div>
                 <div class="event-item__info">
-                    Barceló в ОАЭ — все новости за час: готовимся к зимнему сезону, открытие нового отеля.
+                    Barceló в ОАЭ — все новости за час: готовимся к зимнему сезону, открытие нового отеля.6
                 </div>
                 <button class="calendar-btn calendar-btn_type_add event-item__add-btn">
                     <span></span>
                 </button>
             </div>
-
-            <div class="event-item">
-                <div class="event-item__time event-item__time_status_diabled">
-                    10:00<sup>МСК</sup>
-                </div>
-                <div class="event-item__location"></div>
-                <p class="event-item__info">
-                </p>
-            </div>
-
         </div>
+
+
 
 </div>
 
